Layout: Ditch the position: fixed; on the menu bar
This was causing issues like section links not working quite right
since the menu bar hid the section header and also was a little
inelegant in requiring extra spacing at the top of each page.

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,7 +13,7 @@ hr {
   padding: 0.5em;
   overflow: auto;
   width: calc(100% - 1em);
-  position: fixed;
+  position: static;
   text-align: center;
 }
 
@@ -37,7 +37,7 @@ hr {
 
 /* Content */
 #content-wrapper {
-  padding: 5em 0.5em 0.5em 0.5em;
+  padding: 0.5em 0.5em 0.5em 0.5em;
 }
 
 .container {
